# gb_flask

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  Makefile  requirements.txt  wsgi.py
app/blog/: admin.py  app.py  commands.py  db.py  enums.py  extensions.py  middleware.py  template_filters.py
app/blog/api/: __init__.py  article.py  author.py  tag.py  user.py
app/blog/articles/: views.py
app/blog/config/: .env_example  settings.py
app/blog/data/: data_mock.py
app/blog/data/fixtures/: articles.json  authors.json  tags.json  users.json
app/blog/db/: data_mock.py
app/blog/db/fixtures/: articles.json  users.json
app/blog/forms/: articles.py  users.py
app/blog/index/: views.py
app/blog/models/: __init__.py  article.py  articles.py  articles_tags.py  authors.py  tags.py  user.py  users.py
app/blog/permissions/: article.py  user.py
app/blog/schemas/: __init__.py  article.py  author.py  tag.py  user.py
app/blog/templates/: base.html  footer.html  navbar.html
app/blog/templates/admin/: index.html
app/blog/templates/articles/: create.html  detail.html  list.html
app/blog/templates/auth/: login.html  register.html
app/blog/templates/authors/: detail.html  list.html
app/blog/templates/macro/: registration_form_helper.html
app/blog/templates/users/: detail.html  list.html
app/blog/users/: views.py
app/blog/views/: __init__.py  articles.py  auth.py  authors.py  index.py  users.py
app/migrations/versions/: 325888f716df_user_added_updated_at_and_last_login.py  4b8fdddaf837_extended_password_field.py  886224a9a7b0_password_renamed.py  d176ccdb5a69_initial.py
