[tool.poetry]
name = "gb-flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-combo-jsonapi = "^1.1.0"
python-dotenv = "^1.0.0"
flask-login = "^0.6.2"
flask-migrate = "^4.0.4"
flask-wtf = "^1.1.1"
flask-bcrypt = "^1.0.1"
flask-admin = "^1.6.1"
email-validator = "^2.0.0.post2"
psycopg2-binary = "^2.9.7"
flask-sqlalchemy = "2.5.1"
markupsafe = "2.0.1"
pyyaml = "^6.0.1"
combojsonapi = "^1.1.2"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
